--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,12 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8"
 pyglet = "^1.5.7"
+pillow = "^7.2.0"
 
 [tool.poetry.dev-dependencies]
+pylint = "^2.6.0"
+flake8 = "^3.8.4"
+black = {version = "^20.8b1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
