--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,15 @@ license = "MIT"
 python = "^3.8"
 pyglet = "^1.5.7"
 pillow = "^7.2.0"
+glooey = "^0.3.4"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.6.0"
 flake8 = "^3.8.4"
 black = {version = "^20.8b1", allow-prereleases = true}
+rope = "^0.17.0"
+invoke = "^1.4.1"
+cffi = "^1.14.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
