--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ black = {version = "^20.8b1", allow-prereleases = true}
 rope = "^0.17.0"
 invoke = "^1.4.1"
 cffi = "^1.14.3"
+isort = "^5.5.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
