--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 pyglet = "^1.5.7"
 pillow = "^7.2.0"
 glooey = "^0.3.4"
+pyte = "^0.8.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.6.0"
