--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ rope = "^0.17.0"
 invoke = "^1.4.1"
 cffi = "^1.14.3"
 isort = "^5.5.4"
+mypy = "^0.782"
 
 [build-system]
 requires = ["poetry>=0.12"]
