--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pyglet = "^1.5.7"
 pillow = "^7.2.0"
 glooey = "^0.3.4"
 pyte = "^0.8.0"
+ipcqueue = "^0.9.6"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.6.0"
