--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ invoke = "^1.4.1"
 cffi = "^1.14.3"
 isort = "^5.5.4"
 mypy = "^0.782"
+pre-commit = "^2.7.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
